--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -1,1 +1,8 @@
 /* Entirely used Tailwind CSS for this page*/
+/* im sorry had to use custom path */
+
+/* .blob-background {
+    background-image: url(../../assets/order/blobanimation.svg);
+    opacity: 0.5;
+    background-size: cover;
+} */
