finalize product page

--- a/src/app/auth/logon/logon.component.html
+++ b/src/app/auth/logon/logon.component.html
@@ -24,26 +24,26 @@
         <section class="avtar_section">
             <button mat-fab color="accent" (click)="selected_avtar('The Recruiter')" id="btn1"
                 aria-label="The Recruiter">
-                <mat-icon class="text-green-900">support_agent</mat-icon>
+                <mat-icon class="text-indigo-800">support_agent</mat-icon>
             </button>
-            <button mat-fab color="warn" (click)="selected_avtar('Just a tourist')" id="btn2"
+            <button mat-fab color="accent" (click)="selected_avtar('Just a tourist')" id="btn2"
                 aria-label="Just a tourist">
-                <mat-icon class="text-white-900">face</mat-icon>
+                <mat-icon class="text-indigo-800">face</mat-icon>
             </button>
             <button mat-fab color="accent" (click)="selected_avtar('An IT guy')" id="btn3" aria-label="An IT guy">
-                <mat-icon>sentiment_very_satisfied </mat-icon>
+                <mat-icon class="text-indigo-800">sentiment_very_satisfied </mat-icon>
             </button>
-            <button mat-fab color="warn" (click)="selected_avtar('Hothead')" id="btn4" aria-label="Hothead">
-                <mat-icon>mood_bad</mat-icon>
+            <button mat-fab color="accent" (click)="selected_avtar('Hothead')" id="btn4" aria-label="Hothead">
+                <mat-icon class="text-indigo-800">mood_bad</mat-icon>
             </button>
-            <button mat-fab color="primary" (click)="selected_avtar('Client')" id="btn5" aria-label="Client">
-                <mat-icon>monetization_on</mat-icon>
+            <button mat-fab color="accent" (click)="selected_avtar('Client')" id="btn5" aria-label="Client">
+                <mat-icon class="text-indigo-800">monetization_on</mat-icon>
             </button>
             <br>
         </section>
         <div class="avtar_name">
             <mat-icon class="play_arrow">play_arrow</mat-icon>
-            <label class="text-lg">{{avtarLabel}}</label>
+            <label class="text-lg uppercase">{{avtarLabel}}</label>
         </div>
     </form>
 </div>
