--- a/src/app/open-product/open-product.component.html
+++ b/src/app/open-product/open-product.component.html
@@ -1,4 +1,4 @@
-<div class="productPage_container">
+<div class="productPage_container snap-mandatory snap-y">
     <div class="productPage_content_left">
         <lib-ngx-image-zoom [thumbImage]=main_Image_path [fullImage]=main_Image_path [magnification]="1"
             [enableScrollZoom]="true" [zoomMode]="'hover'" [enableLens]="true" [lensWidth]="250" [lensHeight]="150">
@@ -16,11 +16,12 @@
     <div class="productPage_content_right">
         <h1>{{product_details.name}}</h1>
         <h3><button mat-stroked-button class="star_box">{{product_details.rating | number: '1.0'}}<mat-icon
-                    class="rating_star">star</mat-icon></button> <span class="text-sm align-middle"> Ratings from 90 reviews</span>
+                    class="rating_star">star</mat-icon></button> <span class="text-sm align-middle"> Ratings from 90
+                reviews</span>
         </h3>
-        <h2 class="h2_margin mt-4">Available size</h2> 
+        <h2 class="h2_margin mt-4">Available size</h2>
         <div class="mb-4">{{product_size.length>0?product_size:'Regular'}}</div>
-        <p><span class="text-xl mt-4">&#8377;{{product_details.price}}</span> <span class="text-xs"> (incl. of all
+        <p><span class="text-2xl mt-4">&#8377;{{product_details.price}}</span> <span class="text-xs"> (incl. of all
                 taxes)</span></p>
         <h2 class="h2_margin mt-4">Highlights</h2>
         <ul class="grid grid-cols-2 ml-4 text-base">
@@ -37,14 +38,16 @@
     <div class="buy_btn_left">
         <button mat-raised-button class="add_btn" (click)="addToCart(product_details.id)">Add to cart <mat-icon>
                 add_cart_checkout</mat-icon></button>
-        <button mat-raised-button color="warn">Buy now <mat-icon>shopping_bag</mat-icon></button>
+        <button mat-raised-button color="warn" (click)="addToCart(product_details.id); checkOut()">Buy now
+            <mat-icon>shopping_bag</mat-icon></button>
     </div>
 
     <div class="buy_btn_right"></div>
 
 
-    <section class="interested_section mt-10">
-        <h1 class="!ml-8">Other interesting products</h1>
+    <section class="interested_section mt-10 snap-mandatory snap-y">
+        <h1 class="!ml-8 !mb-1">Other interesting products</h1>
+        <hr class="m-3">
         <button mat-fab color="primary" class="leftArrow" (click)="leftScroll(0)">
             <mat-icon>arrow_back_ios</mat-icon>
         </button>
@@ -70,7 +73,8 @@
 
 
     <section class="similar_section mt-10 mb-10">
-        <h1 class="!ml-8">Similar products</h1>
+        <h1 class="!ml-8 !mb-1">Similar products</h1>
+        <hr class="m-3">
         <button mat-fab color="primary" class="leftArrow" (click)="leftScroll(1)">
             <mat-icon>arrow_back_ios</mat-icon>
         </button>
