--- a/src/app/thankyou/thankyou.component.html
+++ b/src/app/thankyou/thankyou.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    Your order is placed. Order number is {{orderNumber()}}
+    Your order is placed. Order number is {{orderNumber}}
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button mat-dialog-close>Yeah 🤘</button>
