--- a/src/app/aboutdev/aboutdev.component.html
+++ b/src/app/aboutdev/aboutdev.component.html
@@ -1,9 +1,46 @@
 <main class="parent-container">
 
-    <section class="child">Photo and name</section>
-    <section class="child">about and skills</section>
-    <section class="child">about skyshop</section>
-    <section class="child">experience</section>
-    <section class="child">contact</section>
+    <section class="page-1">
+
+        <aside class="inline-flex flex-col gap-4">
+            <div class="x-font-regular x-font-primary-color text-3xl">I'M <span
+                    class="x-font-curve x-font-secondary-color text-6xl font-semibold">Aakash Dave</span></div>
+            <div class="x-font-regular x-font-primary-color text-3xl">Front end Developer & Analyst</div>
+        </aside>
+
+    </section>
+
+    <section class="page-2">
+        <aside class="about my-10">
+            <div class="relative my-10 x-font-curve x-font-primary-color text-6xl font-semibold w-3/4">About</div>
+            <div class="relative my-8 mx-8 x-font-regular x-font-primary-color text-2xl w-3/4">
+                I have acquired solid Web development experience in different technologies as well domains in <span
+                    class="x-font-secondary-color">9+ years</span>
+                of journey. I'm a full time <span class="x-font-secondary-color">front end developer</span> in a large
+                organization, And have proven <span class="x-font-secondary-color">hustle of full
+                    stack development</span>. I have experience of being a <span class="x-font-secondary-color">mentor, trainer & Lead</span>. I offer expertise in
+                SDLC &
+                business decisions.
+            </div>
+        </aside>
+
+        <main class="flex flex-col gap-3">
+            <aside>My Stack</aside>
+            <aside>
+                <div class="stack-card">Javascript</div>
+                <div class="stack-card">Angular</div>
+                <div class="stack-card">HTML & CSS</div>
+                <div class="stack-card">NodeJS</div>
+                <div class="stack-card">Express</div>
+                <div class="stack-card">PostgreSQL</div>
+                <div class="stack-card">GitLab</div>
+            </aside>
+        </main>
+
+    </section>
+
+    <section class="page-3">about skyshop</section>
+    <section class="page-4">experience</section>
+    <section class="page-5">contact</section>
 
 </main>
