--- a/src/app/aboutdev/aboutdev.component.html
+++ b/src/app/aboutdev/aboutdev.component.html
@@ -11,29 +11,33 @@
     </section>
 
     <section class="page-2">
-        <aside class="about my-10">
-            <div class="relative my-10 x-font-curve x-font-primary-color text-6xl font-semibold w-3/4">About</div>
-            <div class="relative my-8 mx-8 x-font-regular x-font-primary-color text-2xl w-3/4">
+        <aside class="about my-8">
+            <div class="relative my-6 x-font-curve x-font-primary-color text-6xl font-semibold w-3/4">About</div>
+            <div class="relative mb-6 mx-8 x-font-regular x-font-primary-color text-2xl w-3/4">
                 I have acquired solid Web development experience in different technologies as well domains in <span
                     class="x-font-secondary-color">9+ years</span>
                 of journey. I'm a full time <span class="x-font-secondary-color">front end developer</span> in a large
                 organization, And have proven <span class="x-font-secondary-color">hustle of full
-                    stack development</span>. I have experience of being a <span class="x-font-secondary-color">mentor, trainer & Lead</span>. I offer expertise in
+                    stack development</span>. I have experience of being a <span class="x-font-secondary-color">mentor,
+                    trainer & Lead</span>. I offer expertise in
                 SDLC &
                 business decisions.
             </div>
         </aside>
 
-        <main class="flex flex-col gap-3">
-            <aside>My Stack</aside>
-            <aside>
-                <div class="stack-card">Javascript</div>
-                <div class="stack-card">Angular</div>
-                <div class="stack-card">HTML & CSS</div>
-                <div class="stack-card">NodeJS</div>
-                <div class="stack-card">Express</div>
-                <div class="stack-card">PostgreSQL</div>
-                <div class="stack-card">GitLab</div>
+        <main class="flex flex-col gap-3 items-center">
+            <aside class="self-center x-font-curve x-font-primary-color text-6xl font-semibold my-1">My Skills</aside>
+            <aside class="flex flex-row justify-between flex-wrap w-3/4 gap-3">
+                <div class="stack-card"><img src="/assets/skills/js_logo.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/angular.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/typescript.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/html5.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/css3.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/gitlab.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/jenkins.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/nodejs.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/expressjs.svg"></div>
+                <div class="stack-card"><img src="/assets/skills/postgresql.svg"></div>
             </aside>
         </main>
 
