--- a/src/app/aboutdev/aboutdev.component.html
+++ b/src/app/aboutdev/aboutdev.component.html
@@ -3,15 +3,15 @@
     <section class="page-1">
 
         <aside class="inline-flex flex-col gap-4">
-            <div class="x-font-regular x-font-primary-color text-3xl">I'M <span
-                    class="x-font-curve x-font-secondary-color text-6xl font-semibold">Aakash Dave</span></div>
-            <div class="x-font-regular x-font-primary-color text-3xl">Front end Developer & Analyst</div>
+            <div class="x-font-regular x-font-primary-color text-4xl">I'M <span
+                    class="x-font-curve x-font-secondary-color text-7xl font-semibold">Aakash Dave</span></div>
+            <div class="x-font-regular x-font-primary-color text-4xl">Front end Developer <br>System Engineer</div>
         </aside>
 
     </section>
 
     <section class="page-2">
-        <aside class="about my-8">
+        <aside class="about my-6">
             <div class="relative my-6 x-font-curve x-font-primary-color text-6xl font-semibold w-3/4">About</div>
             <div class="relative mb-6 mx-8 x-font-regular x-font-primary-color text-2xl w-3/4">
                 I have acquired solid Web development experience in different technologies as well domains in <span
@@ -43,8 +43,80 @@
 
     </section>
 
-    <section class="page-3">about skyshop</section>
-    <section class="page-4">experience</section>
+    <section class="page-3 relative">
+        <aside class="mt-2 mb-7 mx-10 x-font-curve x-font-primary-color text-6xl font-semibold">Experience</aside>
+        <main class="flex flex-col gap-8 ml-72">
+            <div class="flex flex-row gap-6 self-center w-5/6">
+                <div class="year-shape self-baseline mt-1"><span class="text-lg">2022</span></div>
+                <div class="flex flex-col gap-1 items-center mt-1">
+                    <div class="bg-yellow-400 rounded-full round-bullet"></div>
+                    <div class="self-center h-full w-1 bg-white"></div>
+                </div>
+                <div class="flex flex-col gap-1">
+                    <span class="x-font-regular text-3xl">Angular Developer | Front end</span>
+                    <span class="location text-base">Tata Consultancy Services, INDIA</span>
+                    <span class="exp-segment text-lg">Information & technology <br>
+                        Digitalize & tranform traditional business processes into Single page web app</span>
+                </div>
+            </div>
+            <div class="flex flex-row gap-6 self-center w-5/6">
+                <div class="year-shape self-baseline mt-1"><span class="text-lg">2018</span></div>
+                <div class="flex flex-col gap-1 items-center mt-1">
+                    <div class="bg-yellow-400 rounded-full round-bullet"></div>
+                    <div class="self-center h-full w-1 bg-white"></div>
+                </div>
+                <div class="flex flex-col gap-1">
+                    <span class="x-font-regular text-3xl">Lead Developer | Front end</span>
+                    <span class="location text-base">Tata Consultancy Services, INDIA</span>
+                    <span class="exp-segment text-lg">Retail, Insurance, Healthcare,
+                        Automobile<br>
+                        Manage team & client relationship. Impact evaluation and resolution,
+                        A process advisor and coach</span>
+                </div>
+            </div>
+            <div class="flex flex-row gap-6 self-center w-5/6">
+                <div class="year-shape self-baseline mt-1"><span class="text-lg">2014</span></div>
+                <div class="flex flex-col gap-1 items-center mt-1">
+                    <div class="bg-yellow-400 rounded-full round-bullet"></div>
+                    <div class="self-center h-full w-1 bg-white"></div>
+                </div>
+                <div class="flex flex-col gap-1">
+                    <span class="x-font-regular text-3xl">Senior JavaScript Developer | Front end</span>
+                    <span class="location text-base">Tata Consultancy Services, INDIA</span>
+                    <span class="exp-segment text-lg">Retail, Insurance, Healthcare,
+                        Automobile<br>
+                        Translate customer needs into business and technology
+                        solutions
+                    </span>
+                </div>
+            </div>
+            <div class="flex flex-row gap-6 self-center w-5/6">
+                <div class="year-shape self-baseline mt-1"><span class="text-lg">2013</span></div>
+                <div class="flex flex-col gap-1 items-center mt-1">
+                    <div class="bg-yellow-400 rounded-full round-bullet"></div>
+                    <div class="self-center h-full w-1 bg-white"></div>
+                </div>
+                <div class="flex flex-col gap-1">
+                    <span class="x-font-regular text-3xl">PHP Developer | Full stack</span>
+                    <span class="location text-base">Khodiyar Impex (a2z), INDIA</span>
+                    <span class="exp-segment text-lg">E-commerce<br>
+                        Develop modules for E-commerce websites
+                    </span>
+                </div>
+            </div>
+        </main>
+    </section>
+
+    <section class="page-4">
+        <main class="flex flex-col gap-3 items-center">
+            <aside class="self-center x-font-curve x-font-primary-color text-6xl font-semibold mt-4 mb-10">Portfolio</aside>
+            <aside class="flex flex-row justify-between gap-6">
+                <div class="portfolio-card relative"><img src="/assets/portfolio/skyshop_.PNG"></div>
+                <div class="portfolio-card relative"><div>Working on it</div></div>
+                <div class="portfolio-card relative"><div>Yet to plan</div></div>
+            </aside>
+        </main>
+    </section>
     <section class="page-5">contact</section>
 
 </main>
