--- a/src/app/aboutdev/aboutdev.component.html
+++ b/src/app/aboutdev/aboutdev.component.html
@@ -26,7 +26,7 @@
         </aside>
 
         <main class="flex flex-col gap-3 items-center">
-            <aside class="self-center x-font-curve x-font-primary-color text-6xl font-semibold my-1">My Skills</aside>
+            <aside class="self-start x-font-curve x-font-primary-color text-6xl font-semibold my-1">My Skills</aside>
             <aside class="flex flex-row justify-between flex-wrap w-3/4 gap-3">
                 <div class="stack-card"><img src="/assets/skills/js_logo.svg"></div>
                 <div class="stack-card"><img src="/assets/skills/angular.svg"></div>
@@ -108,12 +108,23 @@
     </section>
 
     <section class="page-4">
-        <main class="flex flex-col gap-3 items-center">
-            <aside class="self-center x-font-curve x-font-primary-color text-6xl font-semibold mt-4 mb-10">Portfolio</aside>
-            <aside class="flex flex-row justify-between gap-6">
-                <div class="portfolio-card relative"><img src="/assets/portfolio/skyshop_.PNG"></div>
-                <div class="portfolio-card relative"><div>Working on it</div></div>
-                <div class="portfolio-card relative"><div>Yet to plan</div></div>
+        <main class="flex flex-col items-center h-full">
+            <aside class="x-font-curve x-font-primary-color text-6xl font-semibold mt-5">Portfolio</aside>
+            <aside class="flex flex-row justify-between gap-6 grow items-center">
+                <div class="portfolio-card relative">
+                    <img src="/assets/portfolio/skyshop_.PNG">
+                    <div class="demo-1-detail">
+                        <p>A lite e-commerce website Demo<br>
+                            <a href="https://www.github.com/aakash-dave/skyshop" target="_blank"><button class="visit-btn">Visit on Github</button></a>
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-card relative">
+                    <p>Working on it</p>
+                </div>
+                <div class="portfolio-card relative">
+                    <p>Yet to plan</p>
+                </div>
             </aside>
         </main>
     </section>
