--- a/src/app/aboutdev/aboutdev.component.html
+++ b/src/app/aboutdev/aboutdev.component.html
@@ -11,9 +11,9 @@
     </section>
 
     <section class="page-2">
-        <aside class="about my-6">
+        <aside class="about">
             <div class="relative my-6 x-font-curve x-font-primary-color text-6xl font-semibold w-3/4">About</div>
-            <div class="relative mb-6 mx-8 x-font-regular x-font-primary-color text-2xl w-3/4">
+            <div class="relative mb-6 x-font-regular x-font-primary-color text-2xl w-3/4">
                 I have acquired solid Web development experience in different technologies as well domains in <span
                     class="x-font-secondary-color">9+ years</span>
                 of journey. I'm a full time <span class="x-font-secondary-color">front end developer</span> in a large
@@ -26,7 +26,7 @@
         </aside>
 
         <main class="flex flex-col gap-3 items-center">
-            <aside class="self-start x-font-curve x-font-primary-color text-6xl font-semibold my-1">My Skills</aside>
+            <aside class="self-center x-font-curve x-font-primary-color text-6xl font-semibold my-1">My Skills</aside>
             <aside class="flex flex-row justify-between flex-wrap w-3/4 gap-3">
                 <div class="stack-card"><img src="/assets/skills/js_logo.svg"></div>
                 <div class="stack-card"><img src="/assets/skills/angular.svg"></div>
@@ -45,8 +45,8 @@
 
     <section class="page-3 relative">
         <aside class="mt-2 mb-7 mx-10 x-font-curve x-font-primary-color text-6xl font-semibold">Experience</aside>
-        <main class="flex flex-col gap-8 ml-72">
-            <div class="flex flex-row gap-6 self-center w-5/6">
+        <main class="flex flex-col gap-8 w-3/5 m-auto translate-experience">
+            <div class="flex flex-row gap-6 self-center w-full">
                 <div class="year-shape self-baseline mt-1"><span class="text-lg">2022</span></div>
                 <div class="flex flex-col gap-1 items-center mt-1">
                     <div class="bg-yellow-400 rounded-full round-bullet"></div>
@@ -59,7 +59,7 @@
                         Digitalize & tranform traditional business processes into Single page web app</span>
                 </div>
             </div>
-            <div class="flex flex-row gap-6 self-center w-5/6">
+            <div class="flex flex-row gap-6 self-center w-full">
                 <div class="year-shape self-baseline mt-1"><span class="text-lg">2018</span></div>
                 <div class="flex flex-col gap-1 items-center mt-1">
                     <div class="bg-yellow-400 rounded-full round-bullet"></div>
@@ -74,7 +74,7 @@
                         A process advisor and coach</span>
                 </div>
             </div>
-            <div class="flex flex-row gap-6 self-center w-5/6">
+            <div class="flex flex-row gap-6 self-center w-full">
                 <div class="year-shape self-baseline mt-1"><span class="text-lg">2014</span></div>
                 <div class="flex flex-col gap-1 items-center mt-1">
                     <div class="bg-yellow-400 rounded-full round-bullet"></div>
@@ -90,7 +90,7 @@
                     </span>
                 </div>
             </div>
-            <div class="flex flex-row gap-6 self-center w-5/6">
+            <div class="flex flex-row gap-6 self-center w-full">
                 <div class="year-shape self-baseline mt-1"><span class="text-lg">2013</span></div>
                 <div class="flex flex-col gap-1 items-center mt-1">
                     <div class="bg-yellow-400 rounded-full round-bullet"></div>
@@ -109,13 +109,15 @@
 
     <section class="page-4">
         <main class="flex flex-col items-center h-full">
-            <aside class="x-font-curve x-font-primary-color text-6xl font-semibold mt-5">Portfolio</aside>
-            <aside class="flex flex-row justify-between gap-6 grow items-center">
+            <aside class="pt-8 x-font-curve x-font-primary-color text-6xl font-semibold">Portfolio
+            </aside>
+            <aside class="flex flex-row justify-center items-center gap-6 grow">
                 <div class="portfolio-card relative">
                     <img src="/assets/portfolio/skyshop_.PNG">
                     <div class="demo-1-detail">
                         <p>A lite e-commerce website Demo<br>
-                            <a href="https://www.github.com/aakash-dave/skyshop" target="_blank"><button class="visit-btn">Visit on Github</button></a>
+                            <a href="https://www.github.com/aakash-dave/skyshop" target="_blank"><button
+                                    class="visit-btn">Visit on Github</button></a>
                         </p>
                     </div>
                 </div>
@@ -128,6 +130,38 @@
             </aside>
         </main>
     </section>
-    <section class="page-5">contact</section>
+    <section class="page-5">
+        <aside class="flex flex-row justify-center items-center h-full">
+            <fieldset class="relative w-full border-solid border-2 border-x-0 border-yellow-400 h-2/4 contact-box">
+                <legend class="text-center px-5 x-font-curve x-font-primary-color text-6xl font-semibold">Contact Me
+                </legend>
+                    <div class="flex flex-row justify-center gap-8 flex-wrap w-3/5 m-auto mt-12">
+                        <div
+                            class="flex justify-evenly items-center contact-card x-font-secondary-color x-font-regular text-2xl">
+                            <img src="/assets/contact/email-icon.svg" class="scale-150">
+                            <div><a href="mailto:aakash.dave81@gmail.com" target="_blank">aakash.dave81@gmail.com</a>
+                            </div>
+                        </div>
+                        <div
+                            class="flex justify-evenly items-center contact-card x-font-secondary-color x-font-regular text-2xl">
+                            <img src="/assets/contact/phone_icon.svg" class="scale-150">
+                            <div><a href="tel:+918866108221" target="_blank">+91 8866108221</a></div>
+                        </div>
+                        <div
+                            class="flex justify-evenly items-center contact-card x-font-secondary-color x-font-regular text-2xl">
+                            <img src="/assets/contact/home_icon.svg" class="scale-150">
+                            <div><a href="https://goo.gl/maps/wZu8WZ57RdBkyKQ19" target="_blank">Vadodara, India</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex justify-center gap-5 social-icon">
+                        <a href="https://github.com/aakash-dave" target="_blank"><img
+                                src="/assets/contact/github-icon.png"></a>
+                        <a href="https://www.linkedin.com/in/me-aaki/" target="_blank"><img
+                                src="/assets/contact/linkedin-icon.png"></a>
+                    </div>
+            </fieldset>
+        </aside>
+    </section>
 
 </main>
