--- a/src/app/aboutdev/aboutdev.component.css
+++ b/src/app/aboutdev/aboutdev.component.css
@@ -60,8 +60,8 @@ section {
   background: #2d2b30;
   background-image: url('/assets/banner/banner-color.png') !important;
   background-size: contain;
-  background-position: right bottom !important;
-  background-repeat: no-repeat !important;
+  background-position: right bottom;
+  background-repeat: no-repeat;
 }
 
 .page-1 aside {
@@ -70,16 +70,16 @@ section {
   left: 15%;
 }
 
-.about {
+.page-2 .about {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
-.about>div {
+.page-2 .about>div {
   left: 10%;
 }
 
-.stack-card {
+.page-2 .stack-card {
   width: 12rem;
   height: 11rem;
   background-color: #2d2b30;
@@ -88,7 +88,7 @@ section {
   transition: all 0.5s;
 }
 
-.stack-card>img {
+.page-2 .stack-card>img {
   /* height: 70%;
   width: 70%; */
   position: relative;
@@ -97,18 +97,18 @@ section {
   transform: translate(-50%, -50%) scale(0.6);
 }
 
-.stack-card:hover {
+.page-2 .stack-card:hover {
   background-color: #e7c05d;
 }
 
-.round-bullet {
+.page-3 .round-bullet {
   height: 2rem;
   width: 1.5rem;
   border-radius: 50%;
   box-shadow: 0px 0px 5px 0px #f1d99e;
 }
 
-.year-shape {
+.page-3 .year-shape {
   color: whitesmoke;
   background: #4d4d59;
   text-align: center;
@@ -117,15 +117,11 @@ section {
   font-weight: 500;
 }
 
-.exp-segment {
+.page-3 .exp-segment {
   color: #c0bfc1;
 }
 
-.translate-experience {
-  /* transform: translate(10%, 0%); */
-}
-
-.portfolio-card {
+.page-4 .portfolio-card {
   width: 22rem;
   height: 22rem;
   background-color: #2d2b30;
@@ -135,18 +131,18 @@ section {
   /* transition: all 0.8s; */
 }
 
-.portfolio-card img {
+.page-4 .portfolio-card img {
   transition: all 0.5s;
 }
 
-.portfolio-card img:hover {
+.page-4 .portfolio-card img:hover {
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
   /* Safari 6.0 - 9.0 */
   opacity: 0.7;
 }
 
-.portfolio-card p {
+.page-4 .portfolio-card p {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -157,18 +153,18 @@ section {
   transition: all 0.5s;
 }
 
-.portfolio-card:hover p {
+.page-4 .portfolio-card:hover p {
   opacity: 1;
 }
 
-.demo-1-detail p {
+.page-4 .demo-1-detail p {
   font-size: 1.3rem;
   line-height: 1.5rem;
   opacity: 0.0;
   transition: all 0.3s;
 }
 
-.portfolio-card:hover .demo-1-detail p {
+.page-4 .portfolio-card:hover .demo-1-detail p {
   opacity: 1;
   backdrop-filter: brightness(0.3);
   padding: 1rem;
@@ -176,7 +172,7 @@ section {
   text-align: center;
 }
 
-.visit-btn {
+.page-4 .visit-btn {
   padding: 0.5rem;
   border: 1px solid #e1b035;
   /* background-color: #e1b035; */
@@ -185,18 +181,18 @@ section {
   transform: scale(0.8);
 }
 
-.visit-btn:hover {
+.page-4 .visit-btn:hover {
   box-shadow: 0px 0px 5px 25px inset #e1b035;
 }
 
-.portfolio-card:has(.demo-1-detail p:hover) img {
+.page-4 .portfolio-card:has(.demo-1-detail p:hover) img {
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
   /* Safari 6.0 - 9.0 */
   opacity: 0.7;
 }
 
-.contact-card {
+.page-5 .contact-card {
   min-width: 40%;
   background-color: #2d2b30;
   min-height: 4rem;
@@ -204,11 +200,11 @@ section {
   box-shadow: 0px 0px 4px 0px #eeeec6;
 }
 
-.contact-card:hover {
+.page-5 .contact-card:hover {
   box-shadow: 0px 0px 4px 0px #e1b035;
 }
 
-.social-icon {
+.page-5 .social-icon {
   bottom: 10%;
   position: absolute;
   right: 50%;
@@ -217,24 +213,93 @@ section {
 
 /* media queries */
 
-@media screen and (min-width:90em) {
-  html,
-  body {
-    font-size: 100%;
+/* 
+<2560  | 160em 4k
+<1440 | 90em large laptop
+<1024 | 64em small laptop
+<768 | 48em tablet
+<425 | 26.5em large mobile
+*/
+
+/* between 4K-2560 <> 1440 4k PC screen */
+/* @media screen and (max-width:160em) {
+  .x-font-primary-color {
+    color: purple;
+  }
+} */
+
+/* between 2560 <> 1440 Large PC screen*/
+@media screen and (max-width:90em) {
+  .x-font-primary-color {
+    color: red;
   }
 }
 
-@media screen and (min-width:90em) {
-  html,
-  body {
-    font-size: 100%;
+/* between 1440 <> 1024 Small PC screen*/
+@media screen and (max-width:64em) {
+
+  .x-font-primary-color {
+    color: blue;
   }
+
+  .page-1 {
+    background-size: cover;
+    background-position: 30%;
+  }
+
+  .page-1 aside {
+    position: absolute;
+    top: 35%;
+    left: 9%;
+  }
+
+  .page-2 .about {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
+
+  .page-2 .about>div {
+    left: 6%;
+    width: 88%;
+  }
+
+  .page-2 main aside:last-child {
+    width: 87%;
+  }
+
+  .page-2 main {
+    gap: 3rem;
+  }
+
+  .page-3 aside {
+    margin-bottom: 4.5rem;
+    margin-top: 2rem;
+  }
+
+  .page-5 fieldset>div:first-of-type {
+    width: 75%;
+    margin-top: 4rem;
+  }
+
 }
 
 
+/* between 1025 <> 768 Tablets*/
+@media screen and (max-width:48em) {
+  .x-font-primary-color {
+    color: green;
+  }
+}
+
+/* between <425px L-Mobile */
+@media screen and (max-width:26.8em) {
+  .x-font-primary-color {
+    color: aqua;
+  }
+}
+
+/* full screen height > 731  */
 @media screen and (min-height:46em) {
-
-  /* full screen height > 731  */
   .page-1 {
     background-size: 95% auto !important;
   }
@@ -245,7 +310,7 @@ section {
     left: 10%;
   }
 
-  .about {
+  .page-2 .about {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
   }
@@ -254,16 +319,16 @@ section {
     gap: 3rem;
   }
 
-  .page-2 main aside:last-child > div {
+  .page-2 main aside:last-child>div {
     margin: 0.5rem;
   }
-  
+
   .page-3 aside {
     margin-bottom: 4.5rem;
     margin-top: 2rem;
   }
 
-  .page-5 fieldset > div:first-of-type {
+  .page-5 fieldset>div:first-of-type {
     margin-top: 4rem;
   }
 
